# Feiteng

./: .gitignore  CMakeLists.txt  README.md  addstudentdialog.cpp  addstudentdialog.h  addstudentdialog.ui  admindialog.cpp  admindialog.h  admindialog.ui  face.txt  face_recognizer.xml  studeninfodialog.cpp  studeninfodialog.h  studeninfodialog.ui
conf/: database.yml  face.yml  log.yml  serial.yml  temperature.yml
include/: addstudentdialog.h  admindialog.h  config.h  database.h  db.h  face.h  file.h  log.h  mainwindow.h  person.h  singleton.h  studeninfodialog.h  temperature.h  thread.h  util.h
model/: face_recognizer.xml
src/: addstudentdialog.cpp  admindialog.cpp  config.cpp  database.cpp  face.cpp  file.cpp  log.cpp  main.cpp  mainwindow.cpp  person.cpp  studeninfodialog.cpp  temperature.cpp  util.cpp
tests/: test_config.cpp  test_database.cpp  test_face.cpp  test_temperature.cpp  test_ui.cpp
ui/: addstudentdialog.ui  admindialog.ui  mainwindow.ui  studeninfodialog.ui
